# lite

./: CMakeLists.txt
data/core/: init.lua
src/: main.c  rencache.c  renderer.c
src/api/: api.h  system.c
